# invoice_flow

./: README.md
assets/: claude_prompt.txt  initial_prompt.txt
backend/: .env  invoiceflow.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  business.py  customers.py  invoices.py  pdf.py  products.py  purchase_orders.py  quotations.py  receipts.py  terms.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/db/: base.py  database.py
backend/app/models/: business_profile.py  customer.py  invoice.py  line_item.py  product.py  purchase_order.py  quotation.py  receipt.py  term.py  user.py
backend/app/schemas/: business_profile.py  customer.py  document.py  product.py  term.py  user.py
backend/app/services/: document_service.py  pdf_service.py  qr_service.py
backend/app/templates/: document_pdf.html
backend/tests/: test_auth.py  test_calculations.py  test_pdf.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  axios.js  business.js  customers.js  documents.js  products.js  terms.js
frontend/src/components/: DocumentForm.jsx  DocumentList.jsx  Layout.jsx  Modal.jsx  ProtectedRoute.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BusinessSetup.jsx  Customers.jsx  Dashboard.jsx  InvoiceForm.jsx  InvoiceList.jsx  Products.jsx  PurchaseOrderForm.jsx  PurchaseOrderList.jsx  QuotationForm.jsx  QuotationList.jsx  ReceiptForm.jsx  ReceiptList.jsx  SignIn.jsx  SignUp.jsx  Terms.jsx  (+1 more)
