[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "bcrypt==4.2.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "passlib[bcrypt]==1.7.4",
    "pillow==11.1.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "qrcode[pil]==8.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
    "weasyprint==63.1",
]
